[gd_scene load_steps=35 format=2]

[ext_resource path="res://Enemy/Bosses/Sewers/Scripts/RatKing.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Bosses/Sewers/Scripts/Sceptre.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Bosses/Sewers/Scripts/ChaseAttack.gd" type="Script" id=3]
[ext_resource path="res://Enemy/Bosses/Sewers/Scripts/JumpAttack.gd" type="Script" id=4]
[ext_resource path="res://Enemy/Bosses/Sewers/Scripts/RatRainAttack.gd" type="Script" id=5]
[ext_resource path="res://Enemy/Bosses/Sewers/Scripts/DashAttack.gd" type="Script" id=6]
[ext_resource path="res://Enemy/Bosses/Sewers/Assets/Scepter.png" type="Texture" id=7]
[ext_resource path="res://Enemy/Bosses/Sewers/Assets/RatKing.png" type="Texture" id=8]
[ext_resource path="res://Enemy/EnemyHitbox.gd" type="Script" id=9]
[ext_resource path="res://light.png" type="Texture" id=10]
[ext_resource path="res://Player/Scenes/ScreenShakeController.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 6 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12.5, 5.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15, 7 )

[sub_resource type="Animation" id=26]
resource_name = "AlreadyDead"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 96, -6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scepter:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Scepter/Sprite:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=18]
resource_name = "DashTelegraph"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("DashAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dash"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("ScreenShakeController")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.1 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=22]
resource_name = "Death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scepter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scepter:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scepter/Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scepter/Light2D:texture_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=14]
resource_name = "JumpTelegraph"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("ScreenShakeController")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.05 ],
"method": "shake"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("JumpAttack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "RatRainLeft"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scepter/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.2, 0.2, 0.4, 0.4, 0.2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scepter/Light2D:texture_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.1, 0.1, 0.3, 0.3, 0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scepter:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 90.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scepter:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 2 ), Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -6, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Scepter/Sprite:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("ScreenShakeController")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.2 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=25]
resource_name = "RatRainRight"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scepter/Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.2, 0.2, 0.4, 0.4, 0.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scepter/Light2D:texture_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.1, 0.1, 0.3, 0.3, 0.1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scepter:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, -90.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Scepter:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 2 ), Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 6, 2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Scepter/Sprite:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("ScreenShakeController")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.2 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "Run"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=24]
resource_name = "Spawn"
length = 4.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1, 1.7, 1.9, 2, 2.2 ),
"transitions": PoolRealArray( 0.267943, 7.21, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 96, 58 ), Vector2( 96, -38 ), Vector2( 96, -6 ), Vector2( 96, -6 ), Vector2( 96, -22 ), Vector2( 96, -22 ), Vector2( 96, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scepter:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.8, 1.9, 2.2, 2.7, 3, 3.1, 3.9, 4.3 ),
"transitions": PoolRealArray( 1, 1e+06, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 2 ), Vector2( 6, 2 ), Vector2( -6, 2 ), Vector2( -6, 2 ), Vector2( 0, -4 ), Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -6, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Scepter/Sprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Scepter:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.2, 2.7, 3.9, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 90.0, 90.0, 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 4.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_animation_over"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("ScreenShakeController")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1, 2.2, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ 0.5 ],
"method": "shake"
}, {
"args": [ 0.3 ],
"method": "shake"
}, {
"args": [ 0.2 ],
"method": "shake"
} ]
}

[sub_resource type="Animation" id=19]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 3 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 0.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 1 )

[sub_resource type="Animation" id=8]
resource_name = "SwingLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("Scepter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 2 ), Vector2( -24, -4 ), Vector2( -26, 0 ), Vector2( -24, 4 ), Vector2( -6, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scepter:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0, -90.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scepter/Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Scepter")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_swing_attack"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "SwingRight"
tracks/0/type = "value"
tracks/0/path = NodePath("Scepter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 2 ), Vector2( 24, -4 ), Vector2( 26, 0 ), Vector2( 24, 4 ), Vector2( 6, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scepter:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0, 90.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scepter/Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Scepter")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_swing_attack"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "ThrowLeft"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Scepter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 2 ), Vector2( -2, 2 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Scepter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "accelerate_left"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "ThrowRight"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Scepter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 2 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Scepter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "accelerate_right"
} ]
}

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 3, 1 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 19, 6 )

[node name="RatKing" type="KinematicBody2D" groups=["Boss"]]
position = Vector2( 96, -6 )
collision_layer = 4
script = ExtResource( 1 )
phase1_attack_cooldown = 3
phase2_attack_cooldown = 3
phase3_attack_cooldown = 4
phase1_transition_cooldown = 1
phase2_transition_cooldown = 2
phase3_transition_cooldown = 2
phase1_health = 15
phase2_health = 10
phase3_health = 10

[node name="ScreenShakeController" parent="." instance=ExtResource( 11 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 8 )
hframes = 26
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 32
script = ExtResource( 9 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 6 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 7 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/AlreadyDead = SubResource( 26 )
anims/DashTelegraph = SubResource( 18 )
anims/Death = SubResource( 22 )
anims/Idle = SubResource( 11 )
anims/JumpTelegraph = SubResource( 14 )
anims/RatRainLeft = SubResource( 16 )
anims/RatRainRight = SubResource( 25 )
anims/Run = SubResource( 12 )
anims/Spawn = SubResource( 24 )

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 19 )

[node name="Phase1Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Phase2Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Phase3Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Scepter" type="KinematicBody2D" parent="."]
position = Vector2( -6, 2 )
collision_layer = 0
script = ExtResource( 2 )
throw_speed = 128
wall_collision_wait_time = 1
left_resting_position = Vector2( -6, 2 )
right_resting_position = Vector2( 6, 2 )

[node name="Sprite" type="Sprite" parent="Scepter"]
texture = ExtResource( 7 )
centered = false
offset = Vector2( -6, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scepter"]
visible = false
position = Vector2( 0, 2.5 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="Scepter"]
visible = false
position = Vector2( 0, 2.5 )
collision_layer = 16
collision_mask = 32
script = ExtResource( 9 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scepter/Hitbox"]
shape = SubResource( 3 )
disabled = true

[node name="WallCollision" type="Area2D" parent="Scepter"]
visible = false
position = Vector2( 0, 2.5 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scepter/WallCollision"]
shape = SubResource( 4 )

[node name="BossCollision" type="Area2D" parent="Scepter"]
visible = false
position = Vector2( 0, 2.5 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scepter/BossCollision"]
shape = SubResource( 5 )

[node name="WallCollisionTimer" type="Timer" parent="Scepter"]
one_shot = true

[node name="SwingAttack" type="AnimationPlayer" parent="Scepter"]
root_node = NodePath("../..")
anims/SwingLeft = SubResource( 8 )
anims/SwingRight = SubResource( 13 )

[node name="ThrowAttackTelegraph" type="AnimationPlayer" parent="Scepter"]
root_node = NodePath("../..")
anims/ThrowLeft = SubResource( 20 )
anims/ThrowRight = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="Scepter"]
position = Vector2( -4, 2.5 )
texture = ExtResource( 10 )
texture_scale = 0.1
color = Color( 1, 0, 0.266667, 1 )
energy = 0.2

[node name="ChaseAttack" type="Node2D" parent="."]
script = ExtResource( 3 )
chase_attack_length = 2
chase_speed = 64
direction_change_leeway = 32

[node name="ChaseAttackTimer" type="Timer" parent="ChaseAttack"]
one_shot = true

[node name="JumpAttack" type="Node2D" parent="."]
script = ExtResource( 4 )
jump_height = 32
time_in_air = 0.5
upward_speed = 128
downward_speed = 128
max_left_pos = 27
max_right_pos = 93
land_shake_amount = 0.3

[node name="InAirTimer" type="Timer" parent="JumpAttack"]
one_shot = true

[node name="GroundCollision" type="Area2D" parent="JumpAttack"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpAttack/GroundCollision"]
position = Vector2( 0, 6 )
shape = SubResource( 27 )

[node name="RatRainAttack" type="Node2D" parent="."]
script = ExtResource( 5 )
amount_of_rats = 3
rat_spawn_delay = 1.0
left_spawn_limit = 12
right_spawn_limit = 116
spawn_height = -58

[node name="RatSpawnTimer" type="Timer" parent="RatRainAttack"]
one_shot = true

[node name="DashAttack" type="Node2D" parent="."]
script = ExtResource( 6 )
speed = 128
times_to_dash = 3
screen_shake_amount = 0.3

[node name="WallCollision" type="Area2D" parent="DashAttack"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashAttack/WallCollision"]
shape = SubResource( 10 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Phase1Cooldown" to="." method="_on_Phase1Cooldown_timeout"]
[connection signal="timeout" from="Phase2Cooldown" to="." method="_on_Phase2Cooldown_timeout"]
[connection signal="timeout" from="Phase3Cooldown" to="." method="_on_Phase3Cooldown_timeout"]
[connection signal="body_entered" from="Scepter/WallCollision" to="Scepter" method="_on_WallCollision_body_entered"]
[connection signal="body_entered" from="Scepter/BossCollision" to="Scepter" method="_on_BossCollision_body_entered"]
[connection signal="timeout" from="Scepter/WallCollisionTimer" to="Scepter" method="_on_WallCollisionTimer_timeout"]
[connection signal="timeout" from="ChaseAttack/ChaseAttackTimer" to="ChaseAttack" method="_on_ChaseAttackTimer_timeout"]
[connection signal="timeout" from="JumpAttack/InAirTimer" to="JumpAttack" method="_on_InAirTimer_timeout"]
[connection signal="body_entered" from="JumpAttack/GroundCollision" to="JumpAttack" method="_on_GroundCollision_body_entered"]
[connection signal="timeout" from="RatRainAttack/RatSpawnTimer" to="RatRainAttack" method="_on_RatSpawnTimer_timeout"]
[connection signal="body_entered" from="DashAttack/WallCollision" to="DashAttack" method="_on_WallCollision_body_entered"]
